<resources>
    <string name="app_name">Personal Status Monitor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email or User Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bluetooth_connection">Bluetooth connection</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_on">turn on</string>
    <string name="list_devices">list devices</string>
    <string name="get_visible">get visible</string>
    <string name="connect">Connect</string>
    <string name="annotations">Annotations</string>
    <string name="motor_function">Motor Function</string>
    <string name="motor_fluctuation">Motor Fluctuation</string>
    <string name="dyskinesia">Dyskinesia</string>
    <string name="freeze_of_gait">Freeze of Gait</string>
    <string name="user_login_register">user login / register</string>
    <string name="prophetic">Prophetic</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>
