<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.personalstatusmonitor.Annotations">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dim_4"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="@string/bluetooth_connection"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/turn_on_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_80"
        android:layout_margin="@dimen/dim_4"
        android:layout_weight="1"
        android:background="@color/turn_on"
        android:onClick="on"
        android:text="@string/turn_on"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />

        <Button
            android:id="@+id/turn_off_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_80"
            android:layout_margin="@dimen/dim_4"
            android:layout_weight="1"
            android:background="@color/turn_off"
            android:onClick="off"
            android:text="@string/turn_off"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20" />
    </LinearLayout>

    <TextView
        android:id="@+id/annotations"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dim_4"
        android:layout_marginTop="@dimen/dim_4"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="@string/annotations"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />
    <Button
        android:id="@+id/motor_function"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70"
        android:layout_below="@id/annotations"
        android:layout_margin="@dimen/dim_4"
        android:background="#69355f"
        android:drawableLeft="@drawable/ic_settings_white_24dp"
        android:paddingLeft="@dimen/dim_10"
        android:text="@string/motor_function"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />
    <Button
        android:id="@+id/motor_fluctuation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70"
        android:layout_below="@id/motor_function"
        android:layout_margin="@dimen/dim_4"
        android:background="#783c6c"
        android:drawableLeft="@drawable/ic_timeline_white_24dp"
        android:paddingLeft="@dimen/dim_10"
        android:text="@string/motor_fluctuation"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />
    <Button
        android:id="@+id/dyskinesia"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70"
        android:layout_below="@id/motor_fluctuation"
        android:layout_margin="@dimen/dim_4"
        android:background="#87447a"
        android:drawableLeft="@drawable/ic_accessibility_white_24dp"
        android:paddingLeft="@dimen/dim_10"
        android:text="@string/dyskinesia"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_70"
        android:layout_below="@id/dyskinesia"
        android:layout_margin="@dimen/dim_4"
        android:background="#964c88"
        android:drawableLeft="@drawable/ic_directions_walk_white_24dp"
        android:paddingLeft="@dimen/dim_10"
        android:text="@string/freeze_of_gait"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />

</LinearLayout>
