<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.personalstatusmonitor.MainActivity">

    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dim_4"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="@string/bluetooth_connection"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/turn_on_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_80"
            android:layout_margin="@dimen/dim_4"
            android:layout_weight="1"
            android:background="#ffa500"
            android:onClick="on"
            android:text="@string/turn_on"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20" />

        <Button
            android:id="@+id/turn_off_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_80"
            android:layout_margin="@dimen/dim_4"
            android:layout_weight="1"
            android:background="#a500ff"
            android:onClick="off"
            android:text="@string/turn_off"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
        android:id="@+id/get_visible"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_80"
            android:layout_margin="@dimen/dim_4"
            android:layout_weight="1"
            android:background="#ffb732"
        android:onClick="visible"
            android:text="@string/get_visible"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_20" />
    <Button
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_80"
        android:layout_margin="@dimen/dim_4"
        android:layout_weight="1"
        android:background="#c04cff"
        android:onClick="list"
        android:text="@string/list_devices"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />
    </LinearLayout>
    <TextView
        android:id="@+id/paired_devices_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:layout_marginTop="@dimen/dim_4"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:text="Paired Devices"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />
    <ListView
        android:id="@+id/pairedDevicesListView"
        android:layout_width="wrap_content"
        android:layout_height="200sp"/>

    <Button
        android:id="@+id/connect_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryLight"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_20" />

</LinearLayout>

